# 16_667_visual_servo

./: README.md
core_central/: README.md
core_central/config/: champ-control.xml  champ-plot.perspective  control.perspective  control_debug.perspective  control_multiplot.xml  line_extractor.perspective  rqt_multiplot_debug.xml
core_central/doc/: visual-servoing.md
core_central/rosinstalls/: px4.rosinstall  sim.rosinstall
core_gazebo_sim/: core.perspective
core_px4_interface/: CMakeLists.txt  README.md  package.xml  px4_interface_plugin.xml  px4_no_tilt_interface_plugin.xml  px4_tilted_hex_interface_plugin.xml
core_px4_interface/include/core_px4_interface/: px4_no_tilt_interface.h  px4_tilted_hex_interface.h
core_px4_interface/launch/: gazebo_interface_node.launch
core_px4_interface/msg/: AttMode.msg
core_px4_interface/src/: px4_no_tilt_interface.cpp  px4_offboard_example_node.cpp  px4_tilted_hex_interface.cpp
core_takeoff_landing_planner/launch/: takeoff_landing_planner.launch
core_takeoff_landing_planner/src/: takeoff_landing_planner.cpp
core_trajectory_library/config/: fixed_trajectories.yaml
core_trajectory_library/src/: fixed_trajectory_generator.py
core_velocity_controller/: CMakeLists.txt
core_velocity_controller/launch/: velocity_controller.launch  velocity_controller_px4.launch
core_velocity_controller/src/: test.cpp  velocity_controller.cpp
model_publisher/src/: model_publisher.py
rqt_behavior_tree_command/config/: gui_config.yaml
rqt_behavior_tree_command/scripts/: rqt_behavior_tree_command
uuv_gazebo_worlds/launch/: ocean_waves.launch  (+1 more)
visual_servo_ship_laning/: CMakeLists.txt
(+23 files in other folders)
